--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="navbar">
                 
                 <div class="logo-container">
-                    <img src="\images\userAsset\download.jpeg" class="logo">
+                    <img src="images/userAsset/download (1).png" class="logo">
                     <div class="logo-text">ONAK CHHABRA</div>
                 </div>
                 
