--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="faded-text">Ronak Chhabra</div>
     
                 <div class="hero-section-left">
-                    <div class="hero-section-heading">Hi! Ronak Chhabra</div>
+                    <div class="hero-section-heading">Hi! Ronak Chhabra HERE</div>
                     
                     <div class="hero-section-heading hero-section-sub-heading">
                         I am a <span class="role"></span>
